fix/gaps in profile

--- a/react-burger/src/pages/Profile/Profile.module.css
+++ b/react-burger/src/pages/Profile/Profile.module.css
@@ -27,8 +27,6 @@
 
 .link {
     height: 64px;
-    text-decoration: none;
-    color: #8585AD;
 }
 
 .linkWrap {
